--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=laptopshop
+# spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+# spring.datasource.username=sa
+# spring.datasource.password=vinh512005
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
